--- a/_data/config.json
+++ b/_data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Azimuth",
     "base_font": "nunito-sans",
-    "palette": "blue",
+    "palette": "purple",
     "header": {
         "logo_img": "images/oculi350x100.png",
         "logo_img_alt": "Logo",
