config.json: updated base_font

--- a/_data/config.json
+++ b/_data/config.json
@@ -1,6 +1,6 @@
 {
     "title": "Azimuth",
-    "base_font": "nunito-sans",
+    "base_font": "fira-sans",
     "palette": "purple",
     "header": {
         "logo_img": "images/oculi350x100.png",
