--- a/_data/config.json
+++ b/_data/config.json
@@ -38,7 +38,7 @@
         "sections": [
             {
                 "type": "footer_text",
-                "image": "images/logo-alt.svg",
+                "image": "images/oculi350x100-weiss.png",
                 "image_url": "/",
                 "image_alt": "Footer logo",
                 "content": "Stackbit theme demo"
