config.json: updated content in sections

--- a/_data/config.json
+++ b/_data/config.json
@@ -41,7 +41,7 @@
                 "image": "images/oculi350x100-weiss.png",
                 "image_url": "/",
                 "image_alt": "Footer logo",
-                "content": "Stackbit theme demo"
+                "content": "OculiMedia - 2021\n"
             },
             {
                 "type": "footer_nav",
