--- a/_data/config.json
+++ b/_data/config.json
@@ -130,7 +130,7 @@
                 "style": "link"
             }
         ],
-        "content": "&copy; OculiMedia & Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>."
+        "content": "&copy; OculiMedia & Stackbit. All rights reserved. "
     },
     "domain": "https://oculimedia.de"
 }
