config.json: updated content in footer

--- a/_data/config.json
+++ b/_data/config.json
@@ -130,7 +130,7 @@
                 "style": "link"
             }
         ],
-        "content": "&copy; OculiMedia & Stackbit. All rights reserved. "
+        "content": "&copy; OculiMedia & Stackbit - 2021. All rights reserved. "
     },
     "domain": "https://oculimedia.de"
 }
