config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -28,7 +28,7 @@
                 "style": "link"
             },
             {
-                "label": "Sign Up",
+                "label": "BOOK A FREE CONSULTATION",
                 "url": "/signup",
                 "style": "primary"
             }
