--- a/_data/config.json
+++ b/_data/config.json
@@ -23,7 +23,7 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
+                "label": "Blog",
                 "url": "/style-guide",
                 "style": "link"
             },
