--- a/_data/config.json
+++ b/_data/config.json
@@ -13,7 +13,7 @@
                 "style": "link"
             },
             {
-                "label": "Features",
+                "label": "Services",
                 "url": "/features",
                 "style": "link"
             },
