config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -48,7 +48,7 @@
                 "title": "Company",
                 "nav_links": [
                     {
-                        "label": "About Us",
+                        "label": "Services",
                         "url": "/about",
                         "style": "link"
                     },
