config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -58,7 +58,7 @@
                         "style": "link"
                     },
                     {
-                        "label": "Sign Up",
+                        "label": "Blog",
                         "url": "/signup",
                         "style": "link"
                     },
