--- a/_data/config.json
+++ b/_data/config.json
@@ -53,7 +53,7 @@
                         "style": "link"
                     },
                     {
-                        "label": "Blog",
+                        "label": "Pricing",
                         "url": "/blog",
                         "style": "link"
                     },
