config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -63,7 +63,7 @@
                         "style": "link"
                     },
                     {
-                        "label": "Contact",
+                        "label": "Book a free consultation",
                         "url": "/contact",
                         "style": "link"
                     }
