config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -29,7 +29,7 @@
             },
             {
                 "label": "BOOK A FREE CONSULTATION",
-                "url": "/signup",
+                "url": "https://forms.gle/oB6gkZnMEemnxEiN8",
                 "style": "primary"
             }
         ]
