--- a/_data/config.json
+++ b/_data/config.json
@@ -100,7 +100,7 @@
                 ]
             }
         ],
-        "has_nav": false,
+        "has_nav": true,
         "nav_links": [
             {
                 "label": "Terms of Service",
