config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -64,7 +64,7 @@
                     },
                     {
                         "label": "Book a free consultation",
-                        "url": "/contact",
+                        "url": "https://forms.gle/oB6gkZnMEemnxEiN8",
                         "style": "link"
                     }
                 ]
