--- a/_data/config.json
+++ b/_data/config.json
@@ -5,7 +5,7 @@
     "header": {
         "logo_img": "images/oculi350x100.png",
         "logo_img_alt": "Logo",
-        "has_nav": true,
+        "has_nav": false,
         "nav_links": [
             {
                 "label": "Home",
