config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -55,7 +55,7 @@
                 "nav_links": [
                     {
                         "label": "Twitter",
-                        "url": "https://twitter.com/",
+                        "url": "https://twitter.com/OculiManagement",
                         "style": "link",
                         "has_icon": true,
                         "icon": "twitter",
