config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -62,7 +62,7 @@
                         "icon_position": "left"
                     },
                     {
-                        "label": "GitHub",
+                        "label": "Instagram",
                         "url": "https://github.com/",
                         "style": "link",
                         "has_icon": true,
