--- a/_data/config.json
+++ b/_data/config.json
@@ -66,7 +66,7 @@
                         "url": "https://github.com/",
                         "style": "link",
                         "has_icon": true,
-                        "icon": "github",
+                        "icon": "instagram",
                         "icon_position": "left"
                     }
                 ]
