config.json: updated title in sections

--- a/_data/config.json
+++ b/_data/config.json
@@ -51,7 +51,7 @@
             },
             {
                 "type": "footer_nav",
-                "title": "Community",
+                "title": "Social-Media",
                 "nav_links": [
                     {
                         "label": "Twitter",
