config.json: updated has_nav in footer

--- a/_data/config.json
+++ b/_data/config.json
@@ -65,7 +65,7 @@
                 ]
             }
         ],
-        "has_nav": true,
+        "has_nav": false,
         "nav_links": [
             {
                 "label": "Terms of Service",
