--- a/_data/config.json
+++ b/_data/config.json
@@ -21,6 +21,17 @@
                 "label": "BOOK A FREE CONSULTATION",
                 "url": "https://forms.gle/oB6gkZnMEemnxEiN8",
                 "style": "primary"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "has_icon": false,
+                "icon": "arrow-left",
+                "icon_position": "left",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ]
     },
