config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -13,7 +13,7 @@
                 "style": "link"
             },
             {
-                "label": "Blog",
+                "label": "What Are We?",
                 "url": "/style-guide",
                 "style": "link"
             },
