config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -14,7 +14,7 @@
             },
             {
                 "label": "What Are We?",
-                "url": "/style-guide",
+                "url": "/about",
                 "style": "link"
             },
             {
