config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -32,7 +32,7 @@
                 "nav_links": [
                     {
                         "label": "What are we?",
-                        "url": "/signup",
+                        "url": "/about",
                         "style": "link"
                     },
                     {
