config.json: updated title

--- a/_data/config.json
+++ b/_data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "OculiMedia ",
+    "title": "OculiMedia - The Marketing Agency For Adult Models",
     "base_font": "nunito-sans",
     "palette": "purple",
     "header": {
